# OpenPypi

./: .coverage  .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.enhanced  Dockerfile.multi  Dockerfile.production  EMOJI_REMOVAL_AND_AUTHOR_UPDATE_COMPLETE.md  EMOJI_REMOVAL_COMPLETE.md  EMOJI_REMOVAL_VERIFICATION.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  METAPROMPT_ANALYSIS.md  PUBLISHING_GUIDE.md  README.md  STATUS_REPORT.md  VERIFY_PUBLICATION.sh  coverage.json  coverage.xml  docker-compose.enhanced.yml  docker-compose.yml  emoji_removal_summary.txt  main.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_test_check.sh  security-audit.sarif  setup.cfg  start_server.py  test_openpypi_functionality.py  (+1 more)
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
.hypothesis/constants/: 0123be56e14aa3d1  012fc595e4c57046  024f568cb55a4db7  029af29e916190ff  02e92bccbaec61b9  03df11928c1b5f95  0692865ee00ec7b1  0ea9d0b1ddca71b7  127dd471e4e413c9  133386670bd36c9f  14bae4b71f41c398  14c1348b580214b7  1be1cb977aaaa5db  1f6a17358e0a760f  1fc8ddc4e1d246f1  1ff87eda693a5dd9  2379a13abd2ba613  2773efc89c00045b  279095ea513ba814  2a42d4c455f12252  2a56f42777cf7eb2  35bc93784c82352a  37c59151befa6655  384ce59e3a3f219c  3a0dac5b451caf3a  430d10f3b9bc77e4  437e32bed4972864  483dbd81f4049911  487f8cfde1856a58  59f2b59c478c06bb  617b0a00cffce49d  637b0063e6224ad6  63eea557048b9192  64fa41720614bc96  66a35e6eb24e1041  68cb7bc9fe39999b  6fe7ce49c4380cf9  7126555d5f4042fa  7142e4d88c97afd0  7216b9cb92f8a090  (+46 more)
.hypothesis/examples/04e6b3400353b141/: b0942298028826d1  ee36d1e96101890e
docker/: entrypoint.sh  gunicorn.conf.py  healthcheck.py
docs/: user_guide.md
k8s/: deployment.yaml  namespace.yaml
scripts/: build_and_test.sh  complete_enhancement_suite.py  complete_setup.py  comprehensive_fix_and_enhancement.py  deploy.py  enhance_coverage.py  fix_environment.py  master_solution.py  publish.py  publish_to_pypi.py  publish_to_pypi.sh
src/openpypi/: __init__.py  __main__.py  _version.py  cli.py
src/openpypi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openpypi/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/openpypi/api/routes/: __init__.py  admin.py  auth.py  generation.py  health.py  monitoring.py  openai_integration.py  packages.py  projects.py
src/openpypi/core/: __init__.py  auth.py  config.py  context.py  env_manager.py  exceptions.py  generator.py  monitoring.py  openpypi.py  orchestrator.py  publishing.py  security.py
src/openpypi/database/: __init__.py  database.py  migrations.py  models.py  session.py
src/openpypi/providers/: __init__.py  ai.py  audit.py  base.py  cloud.py  database.py  docker.py  github.py  openai_provider.py
src/openpypi/stages/: __init__.py  base.py  deployment.py  generation.py  p0_orchestrator.py  p1_conceptualizer.py  p2_architect.py  p3_packager.py  p4_validator.py  p5_documentarian.py  p6_deployer.py  p7_refiner.py  packaging.py  testing.py  validation.py
src/openpypi/templates/: __init__.py  base.py
src/openpypi/templates/cli_tool/: template.yaml
src/openpypi/templates/data_science/: template.yaml
src/openpypi/templates/ml_toolkit/: template.yaml
src/openpypi/templates/ml_toolkit/tests/: test_models.py
src/openpypi/templates/web_api/: template.yaml
src/openpypi/utils/: formatters.py  logger.py  mock_data.py  monitoring.py  validators.py
tests/: __init__.py  complete_system_tests.py  comprehensive_coverage_booster.py  conftest.py  test_api_comprehensive.py  test_core.py  test_providers.py  test_providers_fixed.py  test_stages.py
tests/api/: test_auth_api.py  test_auth_comprehensive.py  test_generation_comprehensive.py  test_health_api.py  test_health_comprehensive.py  test_routes.py
tests/core/: test_config.py  test_config_comprehensive.py  test_context.py  test_context_comprehensive.py  test_generator.py  test_generator_comprehensive.py  test_openpypi_comprehensive.py  test_orchestrator_comprehensive.py
tests/integration/: test_project_generation.py
tests/performance/: locustfile.py
tests/stages/: test_p1_conceptualizer_comprehensive.py  test_p2_architect_comprehensive.py  test_p3_packager_comprehensive.py  test_p4_validator_comprehensive.py  test_p5_documentarian_comprehensive.py  test_p6_deployer_comprehensive.py  test_p7_refiner_comprehensive.py
tests/unit/: test_config.py  test_generator.py
tests/unit/providers/: test_providers.py  test_providers_enhanced.py
